--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "laravel-mix": "^0.8.1",
     "lodash": "^4.17.4",
     "vue": "^2.1.10"
+  },
+  "dependencies": {
+    "vue-resource": "^1.2.1",
+    "vue-router": "^2.3.0"
   }
 }
